# pr-auto-reviewer

./: .env.example  .gitignore  ARCHITECTURE.md  INSTALL.md  README.md  code_modifier.py  code_reviewer.py  config.py  git_ops.py  github_client.py  main.py  package-lock.json  package.json  pyproject.toml
models/: __init__.py  base.py  claude.py  claude_code.py  gemini.py
pr_auto_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: code-modifier.ts  config.ts  git-ops.ts  github-client.ts  index.ts  types.ts
src/models/: base.ts  gemini.ts  index.ts
